Add accidentally removed file. Add pg8000 dependency. Rebuild typescript API
