# openapi/openapi.json
@@ -1,9 +1,22 @@
 {
   "info": {
-    "title": "APIFlask",
-    "version": "0.1.0"
+    "contact": {
+      "name": "Craig Fiedorek",
+      "email": "rcraigfiedorek@gmail.com"
+    },
+    "license": {
+      "name": "GNU General Public License 3.0",
+      "url": "https://www.gnu.org/licenses/gpl-3.0.en.html"
+    },
+    "description": "This is a free and public API that exposes sanitized corporate emissions data sourced from the <a href=\"https://www.epa.gov/ghgreporting\" target=\"_blank\" rel=\"noopener noreferrer\">EPA Greenhouse Gas Reporting Program</a>. Functions that aid public comprehension of the magnitude of corporate emissions are also included.",
+    "title": "Corporate Emission Facts API",
+    "version": "0.0.1"
   },
-  "tags": [],
+  "tags": [
+    {
+      "name": "CorporateEmissionFacts"
+    }
+  ],
   "paths": {
     "/api/companies": {
       "get": {
@@ -29,6 +42,7 @@
           {
             "in": "query",
             "name": "name",
+            "description": "Filter to include only companies whose name contains this string. Case-insensitive.",
             "schema": {
               "type": "string"
             },
@@ -37,6 +51,7 @@
           {
             "in": "query",
             "name": "year",
+            "description": "Filter to include only companies who reported emissions in this year",
             "schema": {
               "type": "integer"
             },
@@ -45,6 +60,7 @@
           {
             "in": "query",
             "name": "sort_by",
+            "description": "Specifies what attribute to sort results by. If an attribute other than \"name\" is selected, then the \"sort_year\" field is required.",
             "schema": {
               "type": "string",
               "enum": [
@@ -59,6 +75,7 @@
           {
             "in": "query",
             "name": "sort_year",
+            "description": "Specifies which year the \"sort_by\" attribute should be collected from.",
             "schema": {
               "type": "integer"
             },
@@ -87,7 +104,10 @@
             "description": "Validation error"
           }
         },
-        "summary": "Get Companies"
+        "tags": [
+          "CorporateEmissionFacts"
+        ],
+        "summary": "Query a list of companies and get their emissions data"
       }
     },
     "/api/format-quantity": {
@@ -96,6 +116,7 @@
           {
             "in": "query",
             "name": "quantity",
+            "description": "A string containing a number and a unit",
             "schema": {
               "type": "string"
             },
@@ -124,7 +145,10 @@
             "description": "Validation error"
           }
         },
-        "summary": "Get Formatted Quantity"
+        "tags": [
+          "CorporateEmissionFacts"
+        ],
+        "summary": "Utility method for formatting unitful data"
       }
     },
     "/api/emissionComparisonFact": {
@@ -133,6 +157,7 @@
           {
             "in": "query",
             "name": "emission",
+            "description": "Specifies a quantity of GHG emissions in metric tonnes of CO<sub>2</sub> equivalent.",
             "schema": {
               "type": "number"
             },
@@ -141,6 +166,7 @@
           {
             "in": "query",
             "name": "shuffle_key",
+            "description": "Optional. Use to obtain a deterministic shuffle order that doesn't repeat fact templates until all have been returned.",
             "schema": {
               "type": "integer"
             },
@@ -149,6 +175,7 @@
           {
             "in": "query",
             "name": "include_bold_tags",
+            "description": "If true, the output text will include HTML tags for text emphasis.",
             "schema": {
               "type": "boolean",
               "default": false
@@ -178,7 +205,10 @@
             "description": "Validation error"
           }
         },
-        "summary": "Get Emission Comparison Fact"
+        "tags": [
+          "CorporateEmissionFacts"
+        ],
+        "summary": "Get a fact comparing an emission quantity to an action with equivalent impact."
       }
     },
     "/api/companies/{company_id}": {
@@ -215,7 +245,10 @@
             "description": "Not found"
           }
         },
-        "summary": "Get Company"
+        "tags": [
+          "CorporateEmissionFacts"
+        ],
+        "summary": "Get a specific company's emissions data"
       }
     }
   },
@@ -257,16 +290,46 @@
         },
         "type": "object"
       },
+      "EmissionsYearOutput": {
+        "type": "object",
+        "properties": {
+          "facility_count": {
+            "type": "integer",
+            "description": "Given a company and a year, this is the number of facilities that reported emissions to the EPA in that year in which the company has an ownership stake."
+          },
+          "all_facility_emissions": {
+            "type": "number",
+            "description": "The sum of all emissions reported by facilities the company had an ownership stake in for the given year. Given in metric tonnes of CO<sub>2</sub> equivalent."
+          },
+          "fully_owned_emissions": {
+            "type": "number",
+            "description": "The sum of all emissions reported by facilities the company had an ownership stake in for the given year, normalized by ownership percentage. Given in metric tonnes of CO<sub>2</sub> equivalent."
+          }
+        },
+        "required": [
+          "all_facility_emissions",
+          "facility_count",
+          "fully_owned_emissions"
+        ]
+      },
       "CompanyOutput": {
         "type": "object",
         "properties": {
           "name": {
-            "type": "string"
+            "type": "string",
+            "description": "Name of the company, as reported to the EPA"
           },
           "id": {
-            "type": "integer"
+            "type": "integer",
+            "description": "This API's unique identifier for the company. Susceptible to change before v1.0.0."
           },
-          "emissions_by_year": {}
+          "emissions_by_year": {
+            "type": "object",
+            "description": "A mapping whose keys are years and whose values are this company's emissions data for that year",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/EmissionsYearOutput"
+            }
+          }
         },
         "required": [
           "emissions_by_year",
@@ -311,6 +374,7 @@
           },
           "companies": {
             "type": "array",
+            "description": "A list of queried companies",
             "items": {
               "$ref": "#/components/schemas/CompanyOutput"
             }
@@ -324,7 +388,8 @@
         "type": "object",
         "properties": {
           "formatted_quantity": {
-            "type": "string"
+            "type": "string",
+            "description": "The input quantity, formatted to match the styles of the fact endpoint."
           }
         }
       },
@@ -332,16 +397,20 @@
         "type": "object",
         "properties": {
           "fact": {
-            "type": "string"
+            "type": "string",
+            "description": "A text fact comparing the specified emissions to another action of equivalent impact."
           },
           "current_shuffle_key": {
-            "type": "integer"
+            "type": "integer",
+            "description": "The shuffle key that was used to select the output fact. If a shuffle key was specified as input, then this will be identical."
           },
           "next_shuffle_key": {
-            "type": "integer"
+            "type": "integer",
+            "description": "The next shuffle key to use in order to maintain the backend's shuffle order."
           },
           "citations": {
             "type": "array",
+            "description": "A list of citations for the information given in the fact. Currently omitted -- sources may be found at <a rel=\"noopener noreferrer\" target=\"_blank\" href=\"https://github.com/rcraigfiedorek/emissions-bot/blob/main/SOURCES.md\">https://github.com/rcraigfiedorek/emissions-bot/blob/main/SOURCES.md</a>.",
             "items": {
               "type": "string"
             }
